--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,14 @@
       "FFFlabel\\": ""
     }
   },
+  "repositories": [
+    {
+      "type": "vcs",
+      "url": "https://github.com/ffflabel/services.git"
+    }
+  ],
   "require": {
+    "ffflabel/services" : "dev-main@dev",
     "php": ">=7.0"
   },
   "require-dev": {
